<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/book1"
        android:icon="@drawable/book_icon"
        android:title="My Bookings" />
    <item
        android:id="@+id/home1"
        android:icon="@drawable/home_icon"
        android:title="Home" />
    <item
        android:id="@+id/person1"
        android:icon="@drawable/person_icon"
        android:title="My Profile" />


</menu>